[package]
authors = ["Noah Weninger <nweninge@ualberta.ca>"]
description = "A phase vocoder for making audio effects"
keywords = ["audio", "fft", "dsp", "fourier"]
license = "GPL-3.0"
name = "pvoc"
readme = "README.md"
repository = "https://github.com/nwoeanhinnogaehr/pvoc-rs"
version = "0.1.4"

[dependencies]
apodize = "0.2.0"
num = "0.1.32"
num-complex = "0.2.0"
rustfft = "1.0.1"
